kubernetes/nextcloud/postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-postgres
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud-postgres
  template:
    metadata:
      labels:
        app: nextcloud-postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        hostPath:
          path: /var/lib/k8s/nextcloud-db
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgres
  namespace: homelab
spec:
  selector:
    app: nextcloud-postgres
  ports:
  - port: 5432
    targetPort: 5432
